# learn

./: .gitignore  LICENSE  README.md  learn.cabal
Learn/: Algorithms.hs  ConjugateGradient.hs  GradientDescent.hs  IO.hs  MonadLogger.hs  NN.hs  Numeric.hs  Optimisation.hs  Optimization.hs  Types.hs  Util.hs
Learn/IO/: MNIST.hs  Text.hs
scripts/: cvt.sh  debug.ghci
test/: MNISTTest.hs  OptTest.hs  SimpleClassifier.hs
util/: Convert.hs  MatTool.hs
