name:                learn
version:             0.1.0.0
synopsis:            Statistical Learning Library
license:             BSD3
license-file:        LICENSE
author:              Paul Graphov
maintainer:          graphov@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends:
    base == 4.5.*,
    repa >= 0.3,
    repa-devil >= 0.3,
    accelerate >= 0.12
  exposed-modules:
    Learn.NN

executable simpleclassifier
  build-depends:
    base == 4.5.*,
    repa >= 0.3.0,
    repa-devil >= 0.3.0
  main-is: test/SimpleClassifier.hs
  other-modules:
    Learn.NN

executable chargenerator
  build-depends:
    base == 4.5.*
  main-is: gen/CharGenerator.hs


  
  