name:                learn
version:             0.1.0.0
synopsis:            Statistical Learning Library
license:             BSD3
license-file:        LICENSE
author:              Paul Graphov
maintainer:          graphov@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.14

library
  build-depends:
    base == 4.5.*,
    repa >= 3.2,
    repa-algorithms >= 0.3
    
  ghc-options:
   -Wall -fno-warn-missing-signatures
   -Odph
   -fno-liberate-case
   -fsimplifier-phases=4
   -funfolding-use-threshold=1000
   -funfolding-keeness-factor=1000
   -funbox-strict-fields
   -fcpr-off
   -fllvm
   -optlo-O3
   -threaded

  exposed-modules:
    Learn.NN
    Learn.Numeric
    Learn.IO
    Learn.Util
    Learn.GradientDescent
    Learn.Optimization
    Learn.ConjugateGradient

executable simpleclassifier
  main-is: test/SimpleClassifier.hs
  ghc-options:
   -Wall -fno-warn-missing-signatures
   -Odph
   -fno-liberate-case
   -fsimplifier-phases=4
   -funfolding-use-threshold=1000
   -funfolding-keeness-factor=1000
   -funbox-strict-fields
   -fcpr-off
   -fllvm
   -optlo-O3
   -threaded

  build-depends:
    base == 4.5.*,
    learn,
    repa >= 3.2,
    repa-io >= 3.2,
    repa-algorithms >= 3.2

executable opttest
  main-is: test/OptTest.hs
  ghc-options:
    -Wall -fno-warn-missing-signatures
    -Odph
    -fno-liberate-case
    -fsimplifier-phases=4
    -funfolding-use-threshold=1000
    -funfolding-keeness-factor=1000
    -funbox-strict-fields
    -fcpr-off
    -fllvm
    -optlo-O3
    -threaded
  build-depends:
    base == 4.5.*,
    learn,
    repa >= 3.2

executable matconvert
  build-depends:
    base == 4.5.*,
    repa >= 3.2,
    repa-io >= 3.2,
    filepath >= 1.3.0.0
  main-is: util/Convert.hs
  other-modules:
    Learn.IO
  

executable chargenerator
  build-depends:
    base == 4.5.*
  main-is: gen/CharGenerator.hs


  
  